# wenqu

./: .gitignore
src/core/: README.md  pyproject.toml
src/core/wenqu/modules/parsers/: __init__.py  base.py  markdown.py  txt.py
src/core/wenqu/modules/rw/: __init__.py  base.py
src/core/wenqu/modules/splitters/: __init__.py  markdown.py
src/core/wenqu/utils/: markdown.py  nlp.py
src/wenqu/: constants.py  pyproject.toml
src/wenqu/modules/splitters/: markdown.py
